# oxidized_gpt_oss

./: .gitignore  AGENTS.md  Cargo.toml  _v07-llm.md  build.sh  dprint.json  readme.md
_dev/: notes.md  outputs.md
docs/: overview.md
examples/: batch_inference.rs  benchmark.rs
src/: attention.rs  benchmark.rs  config.rs  convert.rs  dtype.rs  ffn.rs  inference.rs  lib.rs  loader.rs  main.rs  memory.rs  model.rs  moe.rs  mxfp4.rs  rope.rs  sampler.rs  tokenizer.rs  utils.rs
src/backend/: metal_stub.rs  mod.rs
src/backend/metal/: metal_impl.rs  mod.rs
src/backend/metal/kernels/: kernels.metal  mod.rs
tests/: integration.rs
