[package]
name = "oxidized_gpt_oss"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytemuck = { version = "1.24.0", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
half = "2.7.1"
memmap2 = "0.9.9"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"
rand = "0.9.2"
rayon = "1.11.0"
safetensors = "0.6.2"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.0"
tokio = "1.47.1"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
