[package]
name = "oxidized_gpt_oss"
version = "0.1.0"
edition = "2024"

[features]
default = ["metal"]
metal = [
  "dep:objc2",
  "dep:objc2-foundation",
  "dep:objc2-metal",
  "candle-core/metal",
]

[dependencies]
anyhow = "1.0.99"
bytemuck = { version = "1.24.0", features = ["derive"] }
candle-core = { version = "0.9.1", default-features = false }
candle-nn = { version = "0.9.1", default-features = false }
candle-transformers = { version = "0.9.1", default-features = false }
clap = { version = "4.5.47", features = ["derive"] }
half = "2.7.1"
hf-hub = "0.5.0"
memmap2 = "0.9.9"
objc2 = { version = "0.6.3", optional = true }
objc2-foundation = { version = "0.3.2", optional = true }
objc2-metal = { version = "0.3.2", optional = true }
rand = "0.10.0"
rayon = "1.11.0"
safetensors = "0.7.0"
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.0"
tokio = "1.47.1"
toml = "1.0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
